# resume-analyzer-builder

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  freeHosting.md  pyproject.toml  requirements-dev.txt
backend/: __init__.py  app.py  installRequirements.txt  requirements.txt
frontend/: index.html  script.js  styles.css
tests/: test_parsing.py
